--- a/busca-de-escolas/package.json
+++ b/busca-de-escolas/package.json
@@ -5,9 +5,13 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "downshift": "^3.2.12",
+    "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-js-pagination": "^3.0.2",
+    "react-scripts": "3.1.1",
+    "react-ultimate-pagination-bootstrap-4": "^1.1.0",
+    "tabler-react": "^1.30.1"
   },
   "scripts": {
     "start": "react-scripts start",
